# QQ-Factory-R-D-Version

./: .env.example  .gitignore  AUTO_DEPLOYMENT.md  BUILD_WORKPLAN.md  CLAUDE.md  CODEX_CLAUDE_REPORTING.md  CONTRIBUTING.md  INSTALLATION.md  MAC_CONTROL_FLOW.md  Makefile  PIPELINE.md  QUICKSTART_STAGE_A.md  README.md  ROADMAP.md  SECURITY.md  WINDOWS_CLAUDE_BOOTSTRAP.md  WORKER_INSTALL.md  pyproject.toml
.claude/commands/: loop-farm-mac.md
.claude/skills/loop-farm-mac/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-capability.md  approval-flow.md  cloud-provider.md  worker-onboarding.md
.github/workflows/: ci.yml
agent/: __init__.py  cli.py  config.py  http.py  inventory.py  runner.py
apps/control-ui/: index.html
apps/control-ui/src/: main.js  styles.css
control/: __init__.py  server.py  store.py
examples/: job-smoke.json  machines.yaml  worker-config.example.json
farmctl/: __init__.py  cli.py  http.py
infra/cloud-init/: worker-linux.yaml
infra/compose/: compose.local.yml
infra/docker/: Dockerfile.control
infra/systemd/: loop-farm-control.service
install/: worker-linux.sh  worker-macos.sh  worker-windows.ps1
scripts/: smoke_store.py
skills/loop-farm-reporter/: SKILL.md
skills/loop-farm-reporter/agents/: openai.yaml
skills/loop-farm-reporter/references/: report_schema.md
skills/loop-farm-reporter/scripts/: report.py
tests/: __init__.py  test_store.py
