[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-farm"
version = "0.1.0"
description = "QQ farm research automation control plane, CLI, and worker agent bootstrap."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
farmctl = "farmctl.cli:main"
loop-farm-agent = "agent.cli:main"
loop-farm-control = "control.server:main"

[tool.setuptools.packages.find]
include = ["agent*", "control*", "farmctl*"]

